<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distobee_hardware</name>
  <version>0.0.0</version>
  <description>distobee_hardware</description>
  <maintainer email="102436271+RafalS3@users.noreply.github.com">RafalS3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>odrive_can</exec_depend>
  <exec_depend>odrive_ros2_control</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
