<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distobee_interfaces</name>
  <version>0.0.0</version>
  <description>ROS 2 messages, services and actions used by the other `distobee_` packages</description>
  <maintainer email="63957587+rayferric@users.noreply.github.com">rayferric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
